changed culture to cultures

--- a/index_html.html
+++ b/index_html.html
@@ -7,7 +7,7 @@
       <div class="layer" id="layer1">
         <h2>Visit Torshov</h2>
         <h3>
-          Enjoy Culture and Sports in this vibrant District close to the center
+          Enjoy Cultures and Sports in this vibrant District close to the center
           of Oslo
         </h3>
       </div>
