--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body id="body">
       <div class="layer" id="layer1">
         <h2>Visit Torshov</h2>
         <h3>
-          Enjoy Culture and Sports in this vibrant District close to the center
+          Enjoy Cultures and Sports in this vibrant District close to the center
           of Oslo
         </h3>
       </div>
@@ -43,5 +43,49 @@
         </div>
     </div>
       </div>
+      <button id="darkmode">Dark Mode</button>
+      <button id="lightmode">Light Mode</button>
+
+      <script>
+        var body = document.getElementById('body');
+    
+        var darkmode = document.getElementById('darkmode');
+        darkmode.addEventListener('click', function() {
+          body.style.backgroundColor = '#000';
+          body.style.color = '#fff';
+        });
+    
+        var lightmode = document.getElementById('lightmode');
+        lightmode.addEventListener('click', function() {
+          body.style.backgroundColor = '#fff';
+          body.style.color = '#000';
+        });
+      </script><script>
+  var body = document.getElementById('body');
+  var layers = document.querySelectorAll('.layer');
+  var darkmode = document.getElementById('darkmode');
+  var lightmode = document.getElementById('lightmode');
+
+  darkmode.addEventListener('click', function () {
+    body.style.backgroundColor = '#000';
+    body.style.color = '#fff';
+
+    layers.forEach(function (layer) {
+      layer.style.backgroundColor = '#222'; // Dark gray for contrast
+      layer.style.color = '#fff';
+    });
+  });
+
+  lightmode.addEventListener('click', function () {
+    body.style.backgroundColor = '#fff';
+    body.style.color = '#000';
+
+    layers.forEach(function (layer) {
+      layer.style.backgroundColor = '#fdf6e3'; // Cream color
+      layer.style.color = '#000';
+    });
+  });
+</script>
+
   </body>
 </html>
